--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "typings": "dist/types/index.d.ts",
   "files": [
     "dist/*",
-    "src/*"
+    "packages/*"
   ],
   "license": "MIT",
   "repository": {
